0.9.6 (currently working on)
- [#4817] Change: Drop the new prices
- [#4849] Fix: Unit test errors about missing constructor parameters
- [#4362] Fix: Skip the configuration check in the unit tests
- [#4361] Fix: Hide the time slot records in the BE lists
- [#4653] Fix: Crash in BE in TYPO3 CMS 6.0.x
- [#4645] Fix: Crash when running the RegistrationManager unit tests in PHP 5.4.6
- [#4622] Fix: Unit test crash with in the DefaultControllerTest PHP 5.4.6
- [#4621] Fix: Event list crashes with PHP 5.4.6
- [#4603] Fix: Download CSV file is empty, thanks to Ton Tersteeg

0.9.5 (released 2012-08-01)
- [#4504] Fix: Registration link in the list view for events with a separate single view page links to the single view page instead of the registration page
- [#4483] Fix: Dash gets escaped twice in the time-slot list in the single view
- [#4497] Change: Adapt the German label for the submit button to § 312g Abs. 3 BGB
- [#4485] Fix: Add TYPO3 maximum version to ext_emconf.php
- [#4481] Fix: Failing unit tests in tx_seminars_EmailSalutation_testcase

0.9.4 (released 2012-07-03)
- [#4482] Fix: PHP error in class.ext_update.php
- [#4462] Fix: HTML tags are visible in the forms when using ameos_formidable 1.1.549
- [#4467] Fix: Test failures and crashes in current Core master in tx_seminars_FrontEnd_DefaultControllerTest, tx_seminars_OldModel_RegistrationTest, tx_seminars_Service_RegistrationManagerTest
- [#4371] Fix: Empty labels in the FE editor and the registration form need be just a space instead of &nbsp;
- [#4429] Fix: Escape the output in more places
- [#4440] Fix: Only use forceCharset for TYPO3 < 4.7
- [#4437] Fix: Test failures in the DefaultController tests when the test are run on a typo3.local host
- [#3815] Fix: Throw more meaningful Exceptions
- [#4428] Fix: Test failure in tx_seminars_EmailSalutation_testcase with latest oelib
- [#4424] Fix: Make the seminars columns searchable in TYPO3 4.6
- [#4347] Fix: Fix missing/incorrect @return and return values